--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://api-posts:api!123456@cluster0-6bppu.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.uri=''
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=api-posts
+spring.data.mongodb.database=''
 
